# agentic_ai

./: .gitignore  app.py  pyproject.toml  requirements.txt
1-LangchainBasics/: langchainbasics.ipynb  qachatbot.py  tools.ipynb
notebook/: document.ipynb  pdf_loader.ipynb
src/: data_loader.py
